update link to new sub-Reddit r/Clashic_Bitcoin

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                             <button onclick="javascript:window.open('https://twitter.com/bitcoinclashic')" class="site-button button-sm font-weight-600" type="button">Twitter</button>
                                         </div>
                                         <div class="button-row">
-                                            <button onclick="javascript:window.open('https://www.reddit.com/r/TitleNetwork/')" class="site-button button-sm font-weight-600" type="button">Reddit</button>
+                                            <button onclick="javascript:window.open('https://www.reddit.com/r/Clashic_Bitcoin/')" class="site-button button-sm font-weight-600" type="button">Reddit</button>
                                         </div>
                                     </div>
                                 </div>
