Update achievements and timelines

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                     <div class="section-content no-col-gap">
                         <div class="row m-b40">
                             <div class="col-md-12">
-                                <h3 class="text-uppercase text-center">LATEST ACHIEVEMENT</h3>
-                                <h4 class="text-center">New Mobile wallets. iOS and Android builds use Insight to send/confirm transactions. No need to download the blockchain!</h4>
+                                <h3 class="text-uppercase text-center">LATEST ACHIEVEMENTS</h3>
+                                <h4 class="text-center">Android wallet. Rebranding back to Bitcoin Clashic on official wallet. New Seeder Node</h4>
                             </div>
                         </div>
                         <div class="row m-b40">
@@ -250,8 +250,8 @@
 
                                 <h4>Incorporate Blake2b PoW Algorithm <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
 
-                                <h4>Native Mobile Wallets <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
-                                <span>iOS and Android</span>
+                                <h4>Mobile Wallets <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <span>Android</span>
 
                                 <!--<h4>New Website/Social Media/Communications <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>-->
                             </div>
@@ -261,23 +261,26 @@
                                 <h4>Discord Managers <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <span>(china, korea, brazil, africa, europe, us, russia,<br/>australia)</span>
                                 <h4>Move Github repos back to Bitcoin-Clashic<span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <h4>Rebrand last time back to Bitcoin Clashic<span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <h4>New Seeder node: seeder.clashic.services<span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                             </div>
                         </div>
                         <div class="row m-t40 m-b40">
                             <div class="col-md-12">
-                                <h3 class="text-uppercase text-center">2020 H2</h3>
+                                <h3 class="text-uppercase text-center">2021 H1</h3>
                             </div>
                         </div>
                         <div class="row roadmap">
                             <div class="col-md-6 col-sm-6 text-center">
-                                <h4>Rebrand last time back to Bitcoin Clashic<span class="glyphicon text-primary font-24"></span></h4>
+                                <h4>Proof of Existence <span class="glyphicon text-primary font-24"></span></h4>
                                 <span>In progress...</span>
-                                <h4>Community Bounties & Seeder Node Campaign</h4>
+                                <h4>Community Bounties & Seeder/Node Campaign</h4>
                                 <span>decentralized through more unique volunteers</span>
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
+                                <h4>Mobile Wallets<span class="glyphicon text-primary font-24"></span></h4>
+                                <span> iOS in progress...</span>
                                 <h4>Add Blake2b ASIC capability to Yiimp Pool Software <span class="glyphicon text-primary font-24"></span></h4>
-                                <h4>Proof of Existence <span class="glyphicon text-primary font-24"></span></h4>
                             </div>
                         </div>
                         <div class="row m-t40 m-b40">
@@ -448,11 +451,11 @@
                     <div class="section-content">
                         <div class="row">
 
-                            <div class="col-md-3 col-sm-6">
+                            <!--<div class="col-md-3 col-sm-6">
                                 <div class="m-b30 text-black wt-icon-box-wraper center">
                                     <div class="font-50 font-weight-800 m-b5"><a href="https://testflight.apple.com/join/fDz3PUtU" target="_blank"><img src="/images/apple.svg"></a></div>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <div class="col-md-3 col-sm-6">
                                 <div class="m-b30 text-black wt-icon-box-wraper center">
@@ -539,7 +542,7 @@
                 <div class="container p-t30">
                     <div class="row">
                         <div class="wt-footer-bot-left">
-                            <span class="copyrights-text">© 2017-2020 Bitcoin Clashic</span>
+                            <span class="copyrights-text">© 2017-2021 Bitcoin Clashic</span>
                         </div>
                     </div>
                 </div>
