remove BCHC symbol and update explorer links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 
     <!-- PAGE TITLE HERE -->
-    <title>Bitcoin Clashic (TNET/BCHC)</title>
+    <title>Bitcoin Clashic ($TNET)</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -389,7 +389,7 @@
                             </div>
                             <a href="" name="explorer"></a>
                             <!-- COLUMNS 1 -->
-                            <div class="col-md-4 col-sm-6 animate_line" onclick="javascript:window.open('https://explorer.title.network')">
+                            <div class="col-md-4 col-sm-6 animate_line" onclick="javascript:window.open('https://explorer.clashic.cash')">
                                 <div class="wt-icon-box-wraper  p-a30 center bg-white m-a5">
                                     <div class="icon-lg text-primary m-b20">
                                         <span class="icon-cell text-primary"><i class="flaticon-network"></i></span>
@@ -403,7 +403,7 @@
                             </div>
 
                             <!-- COLUMNS 2 -->
-                            <div class="col-md-4 col-sm-6 animate_line" onclick="javascript:window.open('https://titlenet.truevisionofsatoshi.com')">
+                            <div class="col-md-4 col-sm-6 animate_line" onclick="javascript:window.open('https://insight.clashic.cash')">
                                 <div class="wt-icon-box-wraper  p-a30 center bg-white m-a5">
                                     <div class="icon-lg text-primary m-b20">
                                         <span class="icon-cell text-primary"><i class="glyphicon glyphicon-search" style="margin-top:26px"></i></span>
