--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                     <div class="wt-separator-outer"><div class="wt-separator bg-primary"></div></div>
                                     <p class="m-b0 text-white"><strong>Bitcoin Clashic in it's current form is open source, peer-to-peer electronic cash just like the projects it forked from.</strong></p>
                                     <p class="m-b0">
-                                        Bitcoin Clashic is a fork from Bitcoin. It was an accidental orphan from the ugly block size wars when Bitcoin Cash forked and subsequently abandoned ABC nodes v0.14.6 - v0.15.1 on it's first concensus rule change via hardfork. Since then Bitcoin Clashic has conducted several hardforks of it's own to add 1-min blocks, a faster DAA and a switch of PoW to Blake2b. It has gone by several brand names in it's 3 years of existence to rally to aid against Bitcoin brand attacks (Bitcoin Core - BTCC), then as an ambassador to new branding dropping "Bitcoin" prefix (Title Network - TNET). The community has decided to return to Bitcoin Clashic - BCHC upon where the project originally started.
+                                        Bitcoin Clashic is a fork from Bitcoin. It was an accidental orphan from the ugly block size wars when Bitcoin Cash forked and subsequently abandoned ABC nodes v0.14.6 - v0.15.1 on it's first concensus rule change via hardfork. Since then Bitcoin Clashic has conducted several hardforks of it's own to add 1-min blocks, a faster DAA and a switch of PoW to Blake2b. It has gone by several brand names in it's 3 years of existence to rally to aid against Bitcoin brand attacks (Bitcoin Core - BTCC), then as an ambassador to new branding dropping "Bitcoin" prefix (Title Network - TNET). The community has decided to return to Bitcoin Clashic upon where the project originally started.
                                     </p>
                                     <!--<p class="text-white">
                                         <strong>The true vision of Bitcoin Clashic is to build onchain applications first utilizing OP_TITLE, a variant of OP_RETURN. Later, adding fault tolerant storage mechanisms and possibly Onion routed runtime containers. Secondary benefits are to compliment Bitcoin, and run along side it, by acting as an express lane for core values, speed and privacy.</strong>
@@ -363,10 +363,10 @@
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Exchange</h4>
                                         <div class="button-row">
                                             <button onclick="javascript:window.open('https://crex24.com/exchange/TNET-BTC')" class="site-button button-sm font-weight-600 m-r5" type="button">CREX24</button>
-                                            <button onclick="javascript:window.open('https://www.southxchange.com/Market/Book/BCHC/BTC')" class="site-button button-sm font-weight-600" type="button">SouthXchange</button>
+                                            <button onclick="javascript:window.open('https://www.southxchange.com/Market/Book/TNET/BTC')" class="site-button button-sm font-weight-600" type="button">SouthXchange</button>
                                         </div>
                                         <div class="button-row">
-                                            <button onclick="javascript:window.open('https://www.finexbox.com/Index/index.html')" class="site-button button-sm font-weight-600" type="button">FinexBox</button>
+                                            <button onclick="javascript:window.open('https://www.finexbox.com/market/pair/TNET-BTC.html')" class="site-button button-sm font-weight-600" type="button">FinexBox</button>
                                             <button onclick="javascript:window.open('https://c-patex.com/markets/tnetbtc')" class="site-button button-sm font-weight-600" type="button">C-Patex</button>
                                         </div>
                                     </div>
