--- a/index.html
+++ b/index.html
@@ -394,24 +394,25 @@
                                     <div class="icon-lg text-primary m-b20">
                                         <span class="icon-cell text-primary"><i class="flaticon-network"></i></span>
                                     </div>
-                                    <div class="icon-content">
-                                        <h4 class="wt-tilte text-uppercase font-weight-500">Explorer</h4>
+                                   <div class="icon-content">
+                                        <h4 class="wt-tilte text-uppercase font-weight-500">Explorers</h4>
                                         <!--<p>TNET block explorer</p>-->
+                                        <button onclick="javascript:window.open('https://insight.clashic.cash/')" class="site-button button-sm font-weight-600" type="button">Insight Explorer</button>
                                         <button onclick="javascript:window.open('https://explorer.clashic.cash/')" class="site-button button-sm font-weight-600 m-r5" type="button">RPC Explorer</button>
                                     </div>
                                 </div>
                             </div>
 
                             <!-- COLUMNS 2 -->
-                            <div class="col-md-4 col-sm-6 animate_line" onclick="javascript:window.open('https://insight.clashic.cash')">
+                            <div class="col-md-4 col-sm-6 animate_line">
                                 <div class="wt-icon-box-wraper  p-a30 center bg-white m-a5">
                                     <div class="icon-lg text-primary m-b20">
                                         <span class="icon-cell text-primary"><i class="glyphicon glyphicon-search" style="margin-top:26px"></i></span>
                                     </div>
                                     <div class="icon-content">
-                                        <h4 class="wt-tilte text-uppercase font-weight-500">Insight</h4>
-                                        <!--<p>TNET block explorer</p>-->
-                                        <button onclick="javascript:window.open('https://insight.clashic.cash/')" class="site-button button-sm font-weight-600" type="button">Insight Explorer</button>
+                                        <h4 class="wt-tilte text-uppercase font-weight-500">Rich List</h4>
+                                        <button onclick="javascript:window.open('https://bitcoin.clashic.cash/addresses_with_balance1740696_top1000.csv')" class="site-button button-sm font-weight-600" type="button">Top 1000</button>
+                                        <button onclick="javascript:window.open('https://bitcoin.clashic.cash/addresses_with_balance1740696_sorted.csv.gz')" class="site-button button-sm font-weight-600" type="button">Full List</button>
                                     </div>
                                 </div>
                             </div>
