Added Clashic Services RPC v2 explorer

--- a/index.html
+++ b/index.html
@@ -397,8 +397,13 @@
                                    <div class="icon-content">
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Explorers</h4>
                                         <!--<p>TNET block explorer</p>-->
-                                        <button onclick="javascript:window.open('https://insight.clashic.cash/')" class="site-button button-sm font-weight-600" type="button">Insight Explorer</button>
-                                        <button onclick="javascript:window.open('https://explorer.clashic.cash/')" class="site-button button-sm font-weight-600 m-r5" type="button">RPC Explorer</button>
+                                        <div class="button-row">
+                                            <button onclick="javascript:window.open('https://insight.clashic.cash/')" class="site-button button-sm font-weight-600" type="button">Insight Explorer</button>
+                                            <button onclick="javascript:window.open('https://explorer.clashic.cash/')" class="site-button button-sm font-weight-600 m-r5" type="button">RPC Explorer</button>
+                                        </div>
+                                        <div class="button-row">
+                                            <button onclick="javascript:window.open('http://rpc-v2.clashic.services/')" class="site-button button-sm font-weight-600 m-r5" type="button">Clashic Services</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
